Fix uiDlgButton wrapping by using display: inline.
git-svn-id: http://pyrodesktop.org/svn/trunk/pyrodesktop@174 bcc094ed-0e32-0410-8ff4-e4362d8942ad

--- a/compzilla/compzilla/chrome/skin/compzilla.css
+++ b/compzilla/compzilla/chrome/skin/compzilla.css
@@ -349,9 +349,9 @@ body {
 
 .uiDlgButton {
         cursor: pointer;
-        /*float: left;*/
         height: 19px;
         width: 19px;
+        display: inline;
         visibility: hidden;
 }
 
@@ -430,4 +430,6 @@ body {
 
 /* a little hack to see if we can get wm-class support working.
    gnome-terminal windows should be translucent */
-*[pyro|wm-class~="Gnome-terminal"] { opacity: 0.5; }
+*[pyro|wm-class~="Gnome-terminal"] { 
+        opacity: 0.5; 
+}
